# coursectl

./: .gitignore  .gitlab-ci.yml  .woodpecker.yml  Cargo.toml  README.md  classlist_example.json  groups_example.csv
scripts/: .gitignore  add_remotes.sh  clone_all.sh  create_fix_mr.sh  create_repos.sh  find-pdf.sh  push-assignment.sh  push-fix.sh
src/: brightspace.rs  create.rs  create_repos.rs  groups.rs  main.rs  models.rs  projects.rs
src/git/: create_repos.rs  invite.rs  mod.rs  projects.rs
