[package]
name = "gitlab-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gitlab = "=0.1603" # Matches gitlab version
dotenv = "0.15"
itertools = "0.11"
http = "~0.2"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
color-eyre = "0.5"
indicatif = "0.17"
ureq = { version = "2.7", features = ["json"] }
