[package]
name = "gitlab-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gitlab = { git = "https://github.com/NULLx76/rust-gitlab.git" }
dotenvy = "0.15"
itertools = "0.13"
http = "1.1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
color-eyre = "0.6"
indicatif = "0.17"
ureq = { version = "2.8", features = ["json"] }
csv = "1.3"
rand = "0.8.5"
regex = "1.10.6"
rookie = "0.5"
